chore: use v5 ethers submodules completely

--- a/package.json
+++ b/package.json
@@ -50,12 +50,18 @@
   ],
   "dependencies": {
     "@aws-sdk/client-kms": "^3.391.0",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/hash": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/properties": "^5.7.0",
+    "@ethersproject/transactions": "^5.7.0",
     "@types/node": "^18.14.6",
     "asn1.js": "^5.4.1",
     "aws-sdk": "^2.1438.0",
     "bn.js": "^5.2.1",
-    "debug": "^4.3.4",
-    "ethers": "^5.4.7"
+    "debug": "^4.3.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
