--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@commitlint/prompt": "^17.4.4",
     "@ls-age/commitlint-circle": "^1.0.0",
+    "@octokit/core": "^5.0.2",
     "@types/asn1": "^0.2.0",
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.5.2",
