--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "@govtechsg/ethers-aws-kms-signer",
+  "name": "@tradetrust-tt/ethers-aws-kms-signer",
   "version": "2.0.0",
   "description": "An Ethers.js compatible signer that connects to AWS KMS",
   "license": "MIT",
-  "repository": "Open-Attestation/ethers-aws-kms-signer",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TradeTrust/ethers-aws-kms-signer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/TradeTrust/ethers-aws-kms-signer/issues"
+  },
+  "homepage": "https://github.com/TradeTrust/ethers-aws-kms-signer#readme",
   "main": "dist/index.js",
+  "types": "dist/ts/src/index.d.ts",
   "author": {
-    "name": "RJ Chow",
-    "email": "me@rjchow.com",
-    "url": "https://github.com/rjchow"
+    "name": "TradeTrust",
+    "url": "https://github.com/TradeTrust"
   },
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "scripts": {
     "type-check": "tsc --noEmit",
@@ -21,19 +27,12 @@
     "postcoverage": "open-cli coverage/lcov-report/index.html",
     "lint": "eslint . --ext js,ts,tsx",
     "lint:fix": "npm run lint -- --fix",
-    "postdocs": "git add README.md",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "tsc --emitDeclarationOnly && babel src -d dist --ignore src/**/*.spec.ts,src/**/*.test.ts -x .js,.ts,.tsx",
     "preversion": "npm run lint && npm test && npm run build",
-    "semantic-release": "semantic-release",
-    "commit": "git-cz",
-    "commit:retry": "git-cz --retry",
-    "commitmsg": "commitlint -e",
-    "commitlint-circle": "commitlint-circle",
-    "upgrade-deps": "npx updtr"
+    "semantic-release": "semantic-release"
   },
-  "types": "dist/ts/src/index.d.ts",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -46,62 +45,61 @@
     ]
   },
   "keywords": [
-    "generator-nod"
+    "tradetrust"
   ],
   "dependencies": {
-    "@aws-sdk/client-kms": "^3.391.0",
-    "@ethersproject/abstract-provider": "^5.7.0",
-    "@ethersproject/abstract-signer": "^5.7.0",
-    "@ethersproject/bytes": "^5.7.0",
-    "@ethersproject/hash": "^5.7.0",
-    "@ethersproject/keccak256": "^5.7.0",
-    "@ethersproject/properties": "^5.7.0",
-    "@ethersproject/transactions": "^5.7.0",
-    "@types/node": "^18.14.6",
+    "@aws-sdk/client-kms": "^3.826.0",
+    "@ethersproject/abstract-provider": "^5.8.0",
+    "@ethersproject/abstract-signer": "^5.8.0",
+    "@ethersproject/bytes": "^5.8.0",
+    "@ethersproject/hash": "^5.8.0",
+    "@ethersproject/keccak256": "^5.8.0",
+    "@ethersproject/properties": "^5.8.0",
+    "@ethersproject/transactions": "^5.8.0",
+    "@types/node": "^18.19.111",
     "asn1.js": "^5.4.1",
-    "aws-sdk": "^2.1438.0",
-    "bn.js": "^5.2.1",
-    "debug": "^4.3.4"
+    "aws-sdk": "^2.1692.0",
+    "bn.js": "^5.2.2",
+    "debug": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.0",
+    "@babel/cli": "^7.27.2",
+    "@babel/core": "^7.27.4",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.21.0",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@commitlint/prompt": "^17.4.4",
-    "@ls-age/commitlint-circle": "^1.0.0",
-    "@octokit/core": "^5.0.2",
-    "@types/asn1": "^0.2.0",
-    "@types/debug": "^4.1.7",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
+    "@commitlint/prompt": "^17.8.1",
+    "@octokit/core": "^5.2.1",
+    "@types/asn1": "^0.2.4",
+    "@types/debug": "^4.1.12",
     "@types/jest": "^27.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.2",
-    "commitizen": "^4.3.0",
+    "babel-jest": "^27.5.1",
+    "commitizen": "^4.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "git-cz": "^4.9.0",
     "husky": "^8.0.3",
-    "jest": "^27.0.4",
-    "lint-staged": "^13.1.2",
-    "open-cli": "^7.1.0",
-    "prettier": "^2.8.4",
-    "rimraf": "^4.4.0",
-    "semantic-release": "^22.0.8",
-    "semantic-release-npm-github-publish": "^1.5.4",
+    "jest": "^27.5.1",
+    "lint-staged": "^13.3.0",
+    "open-cli": "^7.2.0",
+    "prettier": "^2.8.8",
+    "rimraf": "^4.4.1",
+    "semantic-release": "^22.0.12",
+    "semantic-release-npm-github-publish": "^1.5.5",
     "typescript": "^4.9.5"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "config": {
     "commitizen": {
@@ -109,6 +107,6 @@
     }
   },
   "engines": {
-    "node": ">= 10.18"
+    "node": ">=18.17.0"
   }
 }
