--- a/package.json
+++ b/package.json
@@ -74,6 +74,9 @@
     "@commitlint/config-conventional": "^17.8.1",
     "@commitlint/prompt": "^17.8.1",
     "@octokit/core": "^5.2.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^11.0.3",
     "@types/asn1": "^0.2.4",
     "@types/debug": "^4.1.12",
     "@types/jest": "^27.5.2",
